# star-forensics

./: CHANGELOG.md  LICENSE  README.md  action.yml
blob/main/: CONTRIBUTING.md
docs/: LAUNCH_STRATEGY.md  example-action.yml
star-forensics/: SECURITY.md  pyproject.toml
star-forensics/starforensics/: badge.py
starforensics/: __init__.py  analyzer.py  cli.py  patterns.py  report.py  scorer.py
tests/: test_patterns.py
