[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "star-forensics"
version = "0.1.0"
description = "Detect fake GitHub stars with forensic analysis. Generates a public trust score for any repo."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "star-forensics contributors" }]
keywords = ["github", "stars", "forensics", "fake-stars", "trust-score", "security", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/star-forensics/star-forensics"
Repository = "https://github.com/star-forensics/star-forensics"
Issues = "https://github.com/star-forensics/star-forensics/issues"
Changelog = "https://github.com/star-forensics/star-forensics/blob/main/CHANGELOG.md"

[project.scripts]
star-forensics = "starforensics.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-click",
]

[tool.hatch.build.targets.wheel]
packages = ["starforensics"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=starforensics --cov-report=term-missing"
